# rust-01

./: Cargo.toml  todo.txt
src/: chars.rs  const.rs  game.rs  main.rs  state.rs
src/chars/: char.rs  chars_2d.rs  color.rs  glyph.rs  mod.rs
src/world/: blocks.rs  mod.rs
