[package]
name    = "rust-01"
version = "0.1.0"
authors = ["trollingchar <dmitriyrodin0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand    = "*"
noise   = "*"

[dependencies.sdl2]
version = "*"
features = ["image"]